stateless auth added with local storage token